# audio-recorder

./: .gitignore  Cargo.toml  FEATURE_RECORDING_CONFIG.md  README.md  RELEASE.md  build-release.sh  install.sh  run-x11.sh  test_direct_notif  test_direct_notif.rs  test_notif.rs  test_notify_simple.sh  uninstall.sh
.github/workflows/: release.yml
src/: main.rs  notifier.rs
