[package]
name = "audio-recorder"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk4 = "0.9"
ksni = "0.2"
cpal = "0.15"
vorbis_rs = "0.5"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
reqwest = { version = "0.11", features = ["blocking", "multipart"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "fs"] }
